[package]
name = "imagehead"
version = "0.1.0"
authors = ["serxka <serxka@protonmail.com>"]
edition = "2018"
description = "Determine image type and retrieve its size"
repository = "https://github.com/serxka/imagehead/"
license = "MIT"
keywords = ["image", "metadata"]

[dependencies]
byteorder = "1.3.4"

[[bin]]
name = "info"
path = "src/info.rs"
